# nifty_infusion

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.rst  HISTORY.rst  NIFTY_INFUSIONConfig.cmake.in  README.rst
cmake/modules/: FindAD3.cmake  FindNIFTY_INFUSION_EXTERNALS.cmake  FindQPBO.cmake
docs/: Doxyfile  environment.yml
docs/source/: .gitignore  conf.py  index.rst  readme.rst
include/nifty/infusion/: infusion.hpp  infusion_config.hpp  static_properties.hpp  variable_domain.hpp
include/nifty/infusion/contraints/: constraint_base.hpp  discrete_contraint_base.hpp
include/nifty/infusion/factors/: discrete_factor_base.hpp  factor_base.hpp  function_view_discrete_factor.hpp  heterogeneous_container.hpp
include/nifty/infusion/functions/: discrete_function_base.hpp  function_base.hpp  potts_function.hpp  unary_function.hpp
include/nifty/infusion/functions/constraint_functions/: discrete_constraint_function_base.hpp  discrete_value_function_base.hpp  value_function_base.hpp
include/nifty/infusion/functions/value_functions/: discrete_value_function_base.hpp  potts_function.hpp  second_order_function.hpp  unary_function.hpp  value_function_base.hpp  xtensor_function.hpp
include/nifty/infusion/functions/value_functions/weighted/: linear_weighted_discrete_value_function_base.hpp  linear_weighted_unary_function.hpp  weighted_discrete_value_function_base.hpp
include/nifty/infusion/models/: discrete_graphical_model_base.hpp  discrete_model_base.hpp  factor_index.hpp  factors_of_variables.hpp  generic_discrete_graphical_model.hpp  grid_lifted_mulicut_model.hpp  model_base.hpp  multicut_base.hpp
include/nifty/infusion/optimizers/inplace/: ad3.hpp  inplace_discrete_graphical_model_optimizer_base.hpp  inplace_optimizer_base.hpp  libdai.hpp  qpbo.hpp
include/nifty/infusion/optimizers/tools/: movemaker.hxx
include/nifty/infusion/variable_space/: discrete_variable_space_base.hpp  simple_discrete_variable_space.hpp  variable_space_base.hpp
include/nifty/meta/: tuple.hpp
recipe/: build.sh  meta.yaml
src/: CMakeLists.txt
src/docs/: CMakeLists.txt
src/docs/doxygen_doc/: Doxyfile.in  Doxyfile_xml.in
src/docs/doxygen_doc/include/: mainpage.dox
src/examples/: example_1.cpp
src/lib/: CMakeLists.txt
src/tests/: CMakeLists.txt  test_function_view_factor.cpp  test_functions.cpp  test_generic_discrete_graphical_model.cpp  test_infusion_externals.cpp  test_inplace_solver.hpp  test_inplace_solvers.cpp  test_potts.cpp  test_qpbo.cpp
