

# #############################
# # trws
# #############################
# SET(TRWS_SRC_FILES
#     ${TRWS_ROOT_DIR}/minimize.cpp
#     ${TRWS_ROOT_DIR}/MRFEnergy.cpp
#     ${TRWS_ROOT_DIR}/ordering.cpp
#     ${TRWS_ROOT_DIR}/treeProbabilities.cpp
#     ${TRWS_ROOT_DIR}/instances.inc
# )


# #############################
# # qpbo
# #############################
# SET(QPBO_SRC_FILES
#     ${QPBO_ROOT_DIR}/QPBO.cpp
#     ${QPBO_ROOT_DIR}/QPBO_extra.cpp
#     ${QPBO_ROOT_DIR}/QPBO_maxflow.cpp
#     ${QPBO_ROOT_DIR}/QPBO_postprocessing.cpp
#     ${QPBO_ROOT_DIR}/instances.inc
# )


# ADD_LIBRARY(infusion 
#         ${TRWS_SRC_FILES}
#         ${QPBO_SRC_FILES}
# )


# add_dependencies(infusion externl_headers)
